# gemm

cuda/: .gitignore  CMakeLists.txt  _clang-format  readme.md
cuda/include/: gemm.hpp
cuda/src/: gemm_v0.cu  gemm_v1.cu  gemm_v2.cu  gemm_v3.cu  gemm_v4.cu  gemm_v5.cu  gemm_v6.cu  gemm_v7.cu
cuda/tests/: main.cu
